Fixed project cards overflow, flex anns-and-trends

--- a/style.css
+++ b/style.css
@@ -90,9 +90,8 @@ body section {
 .projects-cards {
 	display: grid;
 	gap: 1rem;
-	grid-template:
-		repeat(auto-fill, minmax(14rem, 1fr))
-		/ repeat(auto-fill, minmax(18rem, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+	grid-auto-rows: min-content;
 }
 
 .projects-cards .card {
@@ -116,30 +115,47 @@ body section {
 }
 
 .announcements {
-	display: grid;
-	grid-template-rows: repeat(3, 1fr);
+	display: flex;
+	flex-direction: column;
 	align-items: center;
+	gap: 0.5rem;
 }
 
+.announcements hr {
+	border-bottom: 1px solid;
+	color: rgba(128, 128, 128, 0.877);
+	width: 80%;
+}
 .trendings {
-	display: grid;
-	grid-template-rows: repeat(4, 1fr);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .trendings .trending {
 	display: grid;
 	gap: 0.5rem;
 	grid-template-columns: 1fr 3fr;
-	padding: 0.2rem 0.8rem;
 }
 
 .trendings .trending * {
 	align-self: center;
 }
 
-.trendings .trending img {
+.trendings .trending .trending-icon {
 	grid-row: 1 / -1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.trendings .trending .trending-icon img {
 	border-radius: 50%;
+	scale: 1.15;
+}
+
+.trendings .trending .trending-text .username {
+	margin-bottom: 0.5rem;
 }
 
 /* Typography */
@@ -178,6 +194,7 @@ body {
 .projects-cards .card {
 	border: none;
 	background: var(--color-glass);
+	backdrop-filter: blur(5px);
 	border-radius: 1rem;
 }
 
@@ -214,6 +231,7 @@ body {
 .announcements,
 .trendings {
 	background: var(--color-glass);
+	backdrop-filter: blur(5px);
 	border-radius: 1rem;
 	padding: 1.5rem;
 }
@@ -221,22 +239,16 @@ body {
 /* Announcements */
 
 .announcement {
-	position: relative;
 	line-height: 1.45;
 }
 
-.announcement::after {
-	content: "";
-	background: rgba(0, 0, 0, 0.514);
-	position: absolute;
-	left: 10%;
-	bottom: -1.5rem;
-	height: 1px;
-	width: 80%;
+.announcement .announcement-title {
+	margin-bottom: 0.5rem;
 }
 
-.announcement:last-child::after {
-	display: none;
-}
 
-/* Trendings */
+/* Sidebar */
+
+
+
+/* Header */
